app/assets/stylesheets/kiitos/modules/user_dashboard.css.scss
#new-kiito {
  h3 {
    color: $secondary;
    font-size: 1.25em;
    font-weight: 300;
    margin: 0 0 10px;
  }
  .anonymous {
    color: $h1;
    font-size: 0.8125em;
    label {
      cursor: pointer;
    }
  }
  .btn:disabled {
    background: $dialog-dark;
    color: #bbb;
    pointer-events: none;
  }
  .message-info{
    display: inline-block;
    margin-left: 10px;
    span{
      color: $h1;
      font-size: 0.8125em;
      font-weight: 300;
    }
    .by {
      display: inline-block;
      width: 125px;
    }
    .count {
      color: $secondary;
      &:after {
        content: ')';
      }
      &:before {
        content: '(';
      }
    }
    .date-now{
      float: right;
    }
  }
  .receiver-pic {
    float: left;
  }
  input[type='submit']{
    margin-bottom: 25px;
    vertical-align: top;
  }
  .kiitos-list {
    font: 1em 'Oswald';
    float: right;
    text-transform: uppercase;
    width: 350px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    ul {
      background: #fff;
      max-height: 500px;
      overflow-y: scroll;
      padding: 0 20px;
      width: 280px;
      -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
      box-sizing: border-box;
      li {
        border-bottom: 1px solid #eee;
        color: $secondary;
        display: block;
        font-family: 'Roboto';
        font-weight: 300;
        height: 84px;
        position: relative;
        text-transform: none;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        label {
          display: inline-block;
          height: 100%;
          padding: 30px 0 0 75px;
          width: 100%;
          -webkit-box-sizing: border-box;
          -moz-box-sizing: border-box;
          box-sizing: border-box;
        }
        input[type='radio'] {
          display: none;
        }
        &:last-child {
          border: none;
        }
      }
      .badge{
        border-width: 2px;
      }
    }
    .which {
      display: inline-block;
      margin: 12px 0 0 24px; 
      p {
        display: inline;
        font-size: 1.8em;
      }
    }
  }
  .send {
    display: inline-block;
    float: right;
    margin: 37px 17px 0 0;
    padding-left: 35px;
    .anonymous {
      input[type='checkbox'] {
        display: none;
      }
      input[type="checkbox"]:checked+label:before {
        background: #84c04a;
      }
    }
    label:before {
      background: #ebebeb;
      border: 2px solid #ebebeb;
      content: '';
      display: inline-block;
      height: 11px;
      margin: 0 5px -3px;
      width: 11px;
    }
  }
  .users-list {
    position: relative;
    width: 280px;
    .choose-secondary {
      float: right;
      margin-left: 9px;
    }
    .who {
      width: 315px;
      float: left;
      p {
        font-family: 'Oswald';
        font-size: 1.8em;
        margin: 11px 10px 0px 101px;
        text-transform: uppercase;
        float: left;
      }
      .arrow-right{
        float: right;
        margin: 23px 20px 0 0;
      }
    }
    .who-selection {
      background: #fafafa;
      height: 101px;
      left: 0;
      position: absolute;
      top: -96px;
      width: 280px;
      z-index: 100;
      .add {
        background: #71bbba;
        bottom: 34px;;
        color: #fff;
        display: inline-block;
        height: 33px;
        position: absolute;
        right: 0;
        width: 40px;
        &:after {
          content: '+';
          font-size: 24px;
          padding: 14px;
        }
      }
      .remove {
        background: #b2b2b2;
        bottom: 0;
        color: #fff;
        display: inline-block;
        height: 33px;
        position: absolute;
        right: 0;
        width: 40px;
        &:after {
          content: 'x';
          font-size: 20px;
          padding: 16px;
        }
      }
      .user-search {
        display: inline-block;
        height: 28px;
        margin: 37px 21px;
        width: 210px;
        input[type='text'] {
          background: #fafafa;
          border: none;
          font-size: 12px;
          height: 100%;
          padding: 0;
          width: 100%;
          &:focus {
            outline: none;
          }
        }
        .user-select {
          display: inline-block;
          height: 16px;
          padding: 6px 10px;
          width: 174px;
          .tt-dropdown-menu {
            background: #fafafa;
            font-size: 12px;
            left: -10px !important;
            width: 174px;
            padding: 0px 10px;
          }
        }
        .name {
          font-size: 12px;
          font-weight: 400;
        }
        .email {
          color: #71bbba;
          font-size: 11px;
          &:after {
            content: ')'
          }
          &:before {
            content: '('
          }
        }
        &:after, &:before {
          color: #6c6c6c;
          font-size: 28px;
          line-height: 27px;
        }
        &:after {
          content: ']';
          float: right;
          margin-right: -2px;
        }
        &:before {
          content: '[';
          float: left;
          margin-left: -2px;
        }
      }
      &:after{
        border-style: solid;
        border-width: 10px 10px 0 10px;
        border-color: #fafafa transparent transparent transparent;
        bottom: -10px;
        content: '';
        display: inline-block;
        height: 0;
        right: 52px;
        position: absolute;
        width: 0;
      }
    }
    .optional{
      color: $special;
      font: 300 8px 'Roboto';
      vertical-align: top;
    }
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }
}

#received-kiitos{
  background: $container-secondary;
  padding: 60px;
  position: relative;
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
  box-sizing: border-box;
  .badge{
    margin-right: 15px;
  }
  h1 {
    color: $h1;
    font-size: 1.875em;
    margin: 0;
  }
  &:after {
    background: #ededdf;
    border-radius: 35px;
    content: '';
    display: inline-block;
    height: 70px;
    left: -35px;
    position: absolute;
    top: 75px;
    width: 70px;
  }
  .message-info {
    display: inline-block;
    p {
      margin: 0 0 10px 0;
      &.title {
        color: $secondary;
        font-size: 20px;
      }
      &.sender {
        font-size: 12px;
      }
    }
  }
  .sender, .message-date{
    color: $h1;
    font-size: 12px;
    font-weight: 400;
  }
  .message-date{
    float: right;
  }
}

#scene {
  text-align: center;
  z-index: -100;
  li{
    pointer-events: none;
  }
}

#user-dashboard{
  padding-top: 60px;
  position: relative;
  .wrapper{
    float: right;
    width: 700px;
  }
}

#admin-header-text, #user-header-text {
  color: $header-text;
  text-align: center;
  h4 {
    color: $primary-light;
    font-size: 0.875em;
    margin: 0;
  }
  h2 {
    font-size: 2em;
    margin: 0;
  }
  strong {
    color: $primary;
  }
}

#user-widget {
  min-height: 196px;
  position: relative;
  .current-user{
    font-size: 2.1875em;
  }
  .user-pic{
    display: block;
    position: absolute;
    right: 33%;
    text-align: center;
    top: 0;
    width: 190px;
    &:after {
      content: image-url('kiitos/PNG/shadow.png');
      position: absolute;
      right: 0;
      top: 0;
    }
    img{
      border: 4px solid #fff;
      border-radius: 95px;
      height: 190px;
      position: absolute;
      right: 0;
      top: 0;
      width: 190px;
      z-index: 1;
    }
  }
}

.welcome-back{
  display: inline-block;
  position: absolute;
  right: 50px;
  top: 65px;
  width: 125px;
  p{
    color: $h1;
    margin: 0 0 -10px;
  }
  .current-user {
    p {
      color: #000;
      font-weight: 100;
      margin-top: 5px;
    }
  }
}

.last_name {
  @extend .welcome_back;
  text-transform: uppercase;
}
#new-kiito.form-disabled {
  .btn {
    background: $dialog-dark;
    color: #bbb;
    pointer-events: none;
  }
  .choose {
    background: none;
    pointer-events: none;
  }
  .choose-secondary {
    background: none;
    pointer-events: none;
  }
  h3 {
    color: #b2b2b2;
  }
  label {
    pointer-events: none;
  }
  .message-info {
    .count {
      color: #000;
    }
  }
  .optional {
    color: #bbb;
  }
  textarea {
    pointer-events: none;
  }
}

